# sphere_sweeping_ros

./: CMakeLists.txt  package.xml  sphere_sweeping.cpp  sphere_sweeping_node.cpp
include/: sphere_sweeping.hpp  stereo_processor.h
launch/: sphere_sweeping.launch
